--- a/Clean_Seminar_02.ipynb
+++ b/Clean_Seminar_02.ipynb
@@ -756,6 +756,21 @@
         "plt.imshow(resised_image)\n",
         "plt.show()"
       ]
-    },
+    }
   ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
